[package]
name = "tinybear"
version = "0.1.0"
edition = "2021"
authors = [
    "Michele Orrù <m@orru.net>",
    "George Kadianakis <desnacked@riseup.net>",
    "Eli Margolin <ecmargo@seas.upenn.edu>",
]

# [patch.crates-io]
# ark-std = {git = "https://github.com/arkworks-rs/utils"}
# ark-ec = {git = "https://github.com/arkworks-rs/algebra"}
# ark-ff = {git = "https://github.com/arkworks-rs/algebra"}
# ark-curve25519 = {git = "https://github.com/arkworks-rs/curves"}
# ark-serialize= {git = "https://github.com/arkworks-rs/algebra"}

[dependencies]
ark-ec = {version="0.5", features=["std"]}
ark-ff = {version="0.5", features=["asm"]}
ark-serialize = "0.5"
ark-std = {version="0.5", features=["std", "getrandom"]}
nimue = {git="https://github.com/arkworks-rs/nimue.git", features = ["ark"] }
rand = "0.8.5"
rand_chacha = "0.9"
hex-literal = "0.4"

[dev-dependencies]
ark-curve25519 = "0.5.0"
criterion = "0.5.1"
hex = "0.4.3"


[features]
parallel = ["ark-ec/parallel", "ark-ff/parallel"]

[[bench]]
harness = false
name = "bench_prove"

[[bench]]
harness = false
name = "bench_aes"

[[bench]]
harness = false
name = "bench_linproof"
